Title overflow fix

--- a/frontend/src/styles/header.scss
+++ b/frontend/src/styles/header.scss
@@ -98,6 +98,7 @@
 .header i.arrow {
     height: 25px;
     width: 20px;
+    min-width: 18px;
     display: inline-block;
 	float: left;
 	background-image: url('media/arrow.png');
